# docs/swagger.json
@@ -2754,7 +2754,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/bookmarks.BookmarkDTO"
+                                            "$ref": "#/definitions/bookmarks.ContentDTO"
                                         }
                                     }
                                 }
@@ -2948,7 +2948,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/bookmarks.BookmarkDTO"
+                                            "$ref": "#/definitions/bookmarks.ContentDTO"
                                         }
                                     }
                                 }
@@ -3071,7 +3071,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/bookmarks.BookmarkDTO"
+                                            "$ref": "#/definitions/bookmarks.ContentDTO"
                                         }
                                     }
                                 }
@@ -3292,7 +3292,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/bookmarks.BookmarkDTO"
+                                            "$ref": "#/definitions/bookmarks.ContentDTO"
                                         }
                                     }
                                 }
@@ -4464,19 +4464,19 @@
                 }
             }
         },
-        "bookmarks.BookmarkDTO": {
+        "bookmarks.ContentDTO": {
             "type": "object",
             "properties": {
                 "content": {
                     "type": "string"
                 },
-                "content_embedding": {
-                    "type": "array",
-                    "items": {
-                        "type": "number"
-                    }
-                },
                 "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "domain": {
                     "type": "string"
                 },
                 "html": {
@@ -4485,22 +4485,28 @@
                 "id": {
                     "type": "string"
                 },
+                "is_favorite": {
+                    "type": "boolean"
+                },
                 "metadata": {
                     "$ref": "#/definitions/bookmarks.Metadata"
                 },
-                "screenshot": {
+                "s3_key": {
                     "type": "string"
                 },
                 "summary": {
                     "type": "string"
                 },
-                "summary_embedding": {
+                "tags": {
                     "type": "array",
                     "items": {
-                        "type": "number"
+                        "type": "string"
                     }
                 },
                 "title": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 },
                 "updated_at": {
@@ -4706,7 +4712,7 @@
                 "bookmarks": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/bookmarks.BookmarkDTO"
+                        "$ref": "#/definitions/bookmarks.ContentDTO"
                     }
                 },
                 "limit": {
